...
    @IBAction func saveHashBtn(_ sender: AnyObject) {
        nestedTableViewController.hashTextView.resignFirstResponder()
        Webservice().load(resource: ColorScheme.add(baseUrl : ColorScheme.getBaseUrl(), hashString : (nestedTableViewController.tableView.cellForRow(at: IndexPath(row: 0, section: 1))?.textLabel?.text)!)) { result in
            if result == nil {
                OperationQueue.main.addOperation {
                    let alert = UIAlertController(title: "Oooops !", message: "An error occured, check your connection and try again", preferredStyle: UIAlertControllerStyle.alert)
                    alert.addAction(UIAlertAction(title: "Dismiss", style: UIAlertActionStyle.default, handler: nil))
                    self.present(alert, animated: true, completion: nil)
                }
            }
            else {
                OperationQueue.main.addOperation {
                    let alert = UIAlertController(title: "Saved !", message: "Your hash has been successfully saved", preferredStyle: UIAlertControllerStyle.alert)
                    alert.addAction(UIAlertAction(title: "Dismiss", style: UIAlertActionStyle.default, handler: nil))
                    self.present(alert, animated: true, completion: nil)
                }
            }
            
        }
...
